实现购物车添加与购物车布局

--- a/component/i-swiper/i-swiper.wxss
+++ b/component/i-swiper/i-swiper.wxss
@@ -1,9 +1,7 @@
-/* component/i-swiper/i-swiper.wxss */
 .swiper-wrap{
   height : 320rpx;
-  background-color: red;
+  /* background-color: red; */
 }
-
 .swiper-wrap swiper{
   height : 100%;
   width: 100%;
