--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,14 @@
 /**app.wxss**/
-.container {
+page{
   height: 100%;
-  display: flex;
+}
+.container {
+  height: 100vh;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   padding: 200rpx 0;
-  box-sizing: border-box;
+  box-sizing: border-box; */
 } 
+
