--- a/pages/shop/shop.wxss
+++ b/pages/shop/shop.wxss
@@ -3,12 +3,13 @@
   display: flex;
   flex-direction: column;
 }
-/* .swiper-wrap{
+.swiper-wrap{
   height : 320rpx;
-  background-color: red;
-} */
-
-.main{
-  flex : 1;
-  background-color: yellow;
+  /* background-color: red; */
 }
+
+/* .main{
+  flex : 1;
+  height: 100%;
+  background-color: yellow;
+} */
