--- a/component/i-code-button/i-code-button.wxss
+++ b/component/i-code-button/i-code-button.wxss
@@ -1,10 +1,11 @@
-.main{
+.main {
   flex: 1;
   display: flex;
   justify-content: center;
   height: 100%;
 }
-.main .qrcode-button{
+
+.main .qrcode-button {
   align-items: center;
   width: 320rpx;
   height: 320rpx;
@@ -15,14 +16,31 @@
   justify-content: center;
   margin-top: 80rpx;
   border: 25rpx solid #FFE49B;
+  position: relative;
 }
-.main .qrcode-button image{
+
+.main .qrcode-button image {
   width: 180rpx;
   height: 160rpx;
 }
-.main .qrcode-button text{
-  color:#fff;
+
+.main .qrcode-button text {
+  color: #fff;
   margin-top: 5px;
   width: 180rpx;
   text-align: center;
+}
+
+.circle {
+  position: absolute;
+  min-width: 60rpx;
+  min-height: 60rpx;
+  right: 44rpx;
+  border-radius: 50%;
+  top: 44rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f60;
+  color: #fff;
 }
