--- a/pages/cart/cart.wxss
+++ b/pages/cart/cart.wxss
@@ -8,6 +8,58 @@
   padding-bottom: 181rpx;
 }
 
+.list-item {
+  border-bottom: 1px solid #ccc;
+  padding: 20rpx;
+}
+
+.list-item-sku {
+  color: #ccc;
+  margin: 10rpx 0;
+}
+
+.list-item-price {
+  color: #f60;
+}
+
+.list-item-button-group {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.decrement,
+.increment {
+  width: 60rpx;
+  height: 60rpx;
+  line-height: 55rpx;
+  border: none;
+  display: flex;
+  justify-content: center;
+  border-radius: 50%;
+  overflow: hidden;
+  color: #fff;
+}
+
+.decrement {
+  border: 1rpx solid #FEBE1B;
+  color: #FEBE1B;
+}
+
+.increment {
+  background-color: #FEBE1B;
+}
+
+.count {
+  border: 2rpx solid #FEBE1B;
+  height: 65rpx;
+  width: 150rpx;
+  border-radius: 30rpx;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin: 0 10rpx;
+}
+
 .settle-ment {
   background-color: yellow;
   position: fixed;
@@ -15,37 +67,67 @@
   left: 0;
   right: 0;
 }
-.total-price{
+
+.total-price {
   height: 80rpx;
   line-height: 80rpx;
   background-color: #fff;
   border: 1rpx solid #eee;
   padding: 0 20rpx;
-  color:#ccc;
+  color: #ccc;
 }
-.total-price .price{
+
+.total-price .price {
   margin-left: 10rpx;
   color: #f60;
 }
 
-.button-group{
+.button-group {
   height: 100rpx;
   display: flex;
 }
-.button-group{
-  height : 100rpx;
+
+.button-group {
+  height: 100rpx;
   display: flex;
 }
-.button-group  view{
-  flex : 1;
+
+.button-group view {
+  flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
-  color : #fff;
+  color: #fff;
 }
-.add{
-  background-color:  #FEBE1B;
+
+.add {
+  background-color: #FEBE1B;
 }
-.settle{
+
+.settle {
   background-color: #f60;
+}
+
+.empty-cart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cart-image {
+  width: 400rpx;
+  height: 350rpx;
+  margin: 50rpx 0;
+}
+
+.tips {
+  color: #ccc;
+  font-size: 40rpx;
+  margin-top: 200rpx;
+}
+
+.sancode {
+  border-radius: 15rpx;
+  background-color: #FEBE1B;
+  padding: 20rpx 100rpx;
 }
